Blender crashes when trying to triangulate uv unwrapped mesh #39663

Closed
opened 2014-04-09 18:54:09 +02:00 by Heiko Schmidt · 7 comments

System Information
Win 7 64 bit GTX285

Blender Version
Broken: dfbd994

Blender crashes when trying to triangulate uv unwrapped mesh.

Just unwrap the default cube and press CTRL+T. Blender crashes.

**System Information** Win 7 64 bit GTX285 **Blender Version** Broken: dfbd994 Blender crashes when trying to triangulate uv unwrapped mesh. Just unwrap the default cube and press CTRL+T. Blender crashes.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @heik

Added subscriber: @heik

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-04-09 21:36:46 +02:00

This issue was referenced by blender/blender-addons-contrib@c777f691ad

This issue was referenced by blender/blender-addons-contrib@c777f691ad427260fb39c8d191d3041169e557dd

This issue was referenced by c777f691ad

This issue was referenced by c777f691ad427260fb39c8d191d3041169e557dd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c777f691ad.

Closed by commit c777f691ad.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39663
No description provided.