Fix T39663: Blender crashes when trying to triangulate uv unwrapped mesh.

A dummy arg inversion! This is to be included in 2.70a!